--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 <header>
+    <div class="header">
     <div class="Name"><h1>Gvozdev Filipp</h1></div> 
     <div><img class="profile" src="https://s3.amazonaws.com/media-p.slid.es/uploads/932157/images/5286756/e85387a4925976b5cc953772ae4cdb3c_large.png" alt="Джейсен Стэтхем"></div>
+    </div>
 </header>
 
 
