feat: small changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </main>
 <footer>
         <div class="footer">
-        <div><a href="https://github.com/cathome1"><img width="10%" height="10%" src="https://www.nicepng.com/png/full/52-520535_free-files-github-github-icon-png-white.png" alt="GitHub" title="My GitHub"></a></div>
+        <div><a href="https://github.com/cathome1"><img width="100px" height="10%" src="https://www.nicepng.com/png/full/52-520535_free-files-github-github-icon-png-white.png" alt="GitHub" title="My GitHub"></a></div>
         <div><p>CV Created in 2022</p></div>
         <div><a href="https://rs.school/js/"><img width="100px" height="30%" src="https://rs.school/images/rs_school_js.svg" title="RS:School Java Script Course"></a></div>
     </div>
