--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <h2 class="headline">Contacts:</h2>
 <nav>
-    <div class="contacts"><a href="https://vk.com/ct_hm"><img class="contacts" width="100%" height="100px" src="https://avatars.mds.yandex.net/get-zen_doc/233051/pub_5ca63f887201b500b2fc0a3b_5ca642d87545af00b361ab52/scale_1200" alt="VK"></a></div>
-    <div class="contacts"><a href="https://t.me/juniorct"><img class="contacts" width="100px" height="100px" src="https://static10.tgstat.ru/channels/_0/4e/4e28ab693c938596dfe44f0a427935bc.jpg" alt="Telegram"></a></div>
-    <div class="contacts"><a href="mailto:cathome.bro@yandex.com"><img class="contacts" width="100px" height="100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Mail_%28iOS%29.svg/1200px-Mail_%28iOS%29.svg.png" alt="Email"></a></div>
-    <div class="contacts"><a href="tel:+79775557002"><img class="contacts" width="120px" height="100px" src="https://www.svgrepo.com/show/336074/phone-outgoing.svg" alt="Phone"></a></div>
+    <div class="contacts"><a href="https://vk.com/ct_hm"><img class="contacts" style=" width:100%; height:100px;" src="https://avatars.mds.yandex.net/get-zen_doc/233051/pub_5ca63f887201b500b2fc0a3b_5ca642d87545af00b361ab52/scale_1200" alt="VK"></a></div>
+    <div class="contacts"><a href="https://t.me/juniorct"><img class="contacts" width="100" height="100" src="https://static10.tgstat.ru/channels/_0/4e/4e28ab693c938596dfe44f0a427935bc.jpg" alt="Telegram"></a></div>
+    <div class="contacts"><a href="mailto:cathome.bro@yandex.com"><img class="contacts" width="100" height="100" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Mail_%28iOS%29.svg/1200px-Mail_%28iOS%29.svg.png" alt="Email"></a></div>
+    <div class="contacts"><a href="tel:+79775557002"><img class="contacts" width="120" height="100" src="https://www.svgrepo.com/show/336074/phone-outgoing.svg" alt="Phone"></a></div>
 </nav>
 <main>
     <h2 class="headline">About me</h2>
@@ -48,9 +48,9 @@
 </ul>
 </main>
 <footer>
-        <div><a href="https://github.com/cathome1"><img width="200px" height="200px" src="https://www.nicepng.com/png/full/52-520535_free-files-github-github-icon-png-white.png" alt="GitHub" title="My GitHub"></a></div>
+        <div><a href="https://github.com/cathome1"><img width="200" height="200" src="https://www.nicepng.com/png/full/52-520535_free-files-github-github-icon-png-white.png" alt="GitHub" title="My GitHub"></a></div>
         <p>CV Created in 2022</p>
-        <div><a href="https://rs.school/js/"><img width="300px" height="100px" src="https://rs.school/images/rs_school_js.svg" title="RS:School Java Script Course"></a></div>
+        <div><a href="https://rs.school/js/"><img width="300" height="100" src="https://rs.school/images/rs_school_js.svg" title="RS:School Java Script Course"></a></div>
 </footer>
 </body>
 </html>
